# chat

./: .gitignore  CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatPanel.h  ChatPanel.ui  LEARN_CLIENT.md  LeftBar.h  MainWindowActions.cpp  MainWindowConversation.cpp  MainWindowEvents.cpp  README.md  SessionItemWidget.h  SessionItemWidget.ui  SessionPanel.cpp  SessionPanel.h
client/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  ChatPanel.cpp  ChatPanel.h  LeftBar.cpp  LeftBar.h  LeftBar.ui  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  SessionItemWidget.cpp  SessionPanel.cpp  SessionPanel.h  SessionPanel.ui  main.cpp
server/: AuthRegistry.cpp  AuthRegistry.h  CMakeLists.txt  ChatServer.cpp  ChatServer.h  ChatServerHandlers.cpp  FriendRegistry.cpp  FriendRegistry.h  GroupRegistry.cpp  GroupRegistry.h  MessageStore.cpp  MessageStore.h  PROTOCOL.md  README.md  main.cpp
